# CmyPlot

./: .gitignore  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  codecov.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: logistic-request.md
.github/workflows/: python-app.yml
Phase 2 docs/: deltadocument.md  proj2rubric.md
Phase2_docs/: deltadocument.md
contributing/: labels-guide.md
data/: README.md  test.csv
docs/: .buildinfo  README.md  genindex.html  index.html  modules.html  objects.inv  plotting.environment.html  plotting.html  plotting.layout.html  plotting.pages.bad_url.html  plotting.pages.graph.components.html  plotting.pages.graph.html  plotting.pages.home.html  plotting.pages.html  plotting.pages.table.html  plotting.pages.upload.html  plotting.utils.html  proj1rubric.md  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/plotting/pages/graph/: graph_callbacks.html
docs/_modules/plotting/pages/graph/components/: graph_options.html
docs/_modules/plotting/pages/table/: table_callbacks.html
docs/_modules/plotting/pages/upload/: upload_callbacks.html
docs/_modules/plotting/utils/: functions.html  routes.html
docs/_sources/: index.rst.txt  modules.rst.txt  plotting.environment.rst.txt  plotting.layout.rst.txt  plotting.pages.bad_url.rst.txt  plotting.pages.graph.components.rst.txt  plotting.pages.graph.rst.txt  plotting.pages.home.rst.txt  plotting.pages.rst.txt  plotting.pages.table.rst.txt  plotting.pages.upload.rst.txt  plotting.rst.txt  plotting.utils.rst.txt
src/: app.py  index.py
src/assets/: bootstrap.css
src/components/: graph_options.py
src/environment/: settings.py
src/layout/: footer.py  layout.py  navbar.py
src/pages/bad_url/: bad_url.py
src/pages/graph/: graph.py  graph_callbacks.py
src/pages/graph/components/: graph_options.py
src/pages/home/: home.py
src/pages/table/: table.py  table_callbacks.py
src/pages/upload/: upload.py  upload_callbacks.py
src/plotting/: app.py  index.py
src/plotting/environment/: settings.py
src/plotting/layout/: footer.py  layout.py  navbar.py
src/plotting/pages/bad_url/: bad_url.py
src/plotting/pages/graph/: graph.py  graph_callbacks.py
src/plotting/pages/graph/components/: graph_options.py
src/plotting/pages/home/: home.py
src/plotting/pages/linkShare/: figure_generator.py  offlinepage.py
src/plotting/pages/table/: table.py  table_callbacks.py  table_data.py
src/plotting/pages/upload/: upload.py  upload_callbacks.py
src/plotting/utils/: color.py  constants.py  functions.py  routes.py
src/utils/: color.py  constants.py  external_assets.py  functions.py  routes.py
tests/: README.md  test_functions.py  test_routes.py  test_sample.py
tests/pages/graph/: test_graph_callbacks.py
tests/pages/graph/components/: graph_options.py  test_graph_options.py
tests/pages/linkshare/: test_linkshare_callbacks.py
tests/pages/table/: test_table_callbacks.py
tests/pages/upload/: test_upload_callbacks.py
tests/utils/: test_functions.py  test_routes.py
