[metadata]
name = plotting
description = plot the data
author = Bradley Erickson
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages=find:
install_requires =
    amqp==5.0.6
    atomicwrites==1.4.0
    attrs==21.2.0
    beautifulsoup4==4.10.0
    billiard==3.6.4.0
    Brotli==1.0.9
    celery==5.1.2
    certifi==2021.5.30
    charset-normalizer==2.0.6
    click==7.1.2
    click-didyoumean==0.0.3
    click-plugins==1.1.1
    click-repl==0.2.0
    colorama==0.4.4
    dash==2.0.0
    dash-bootstrap-components==1.0.0b2
    dash-core-components==2.0.0
    dash-html-components==2.0.0
    dash-table==5.0.0
    dill==0.3.4
    diskcache==5.2.1
    flake8==3.9.2
    flaky==3.7.0
    Flask==2.0.1
    Flask-Caching==1.10.1
    Flask-Compress==1.10.1
    future==0.18.2
    idna==3.2
    iniconfig==1.1.1
    itsdangerous==2.0.1
    Jinja2==3.0.1
    kombu==5.1.0
    lxml==4.6.3
    MarkupSafe==2.0.1
    mccabe==0.6.1
    multiprocess==0.70.12.2
    numpy==1.21.2
    packaging==21.0
    pandas==1.3.3
    percy==2.0.2
    plotly==5.3.1
    pluggy==1.0.0
    prompt-toolkit==3.0.20
    psutil==5.8.0
    py==1.10.0
    pycodestyle==2.7.0
    pyflakes==2.3.1
    pyparsing==2.4.7
    pytest==6.2.5
    pytest-mock==3.6.1
    pytest-sugar==0.9.4
    python-dateutil==2.8.2
    python-dotenv==0.19.0
    pytz==2021.1
    redis==3.5.3
    requests==2.26.0
    selenium==3.141.0
    six==1.16.0
    soupsieve==2.2.1
    tenacity==8.0.1
    termcolor==1.1.0
    toml==0.10.2
    urllib3==1.26.7
    vine==5.0.0
    waitress==2.0.0
    wcwidth==0.2.5
    Werkzeug==2.0.1
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where=src

