[metadata]
name = plotting
description = plot the data
author = Bradley Erickson
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages=find:
install_requires =
    atomicwrites==1.4.0
    attrs==21.2.0
    Brotli==1.0.9
    click==8.0.1
    colorama==0.4.4
    dash==2.0.0
    dash-bootstrap-components==1.0.0b2
    dash-core-components==2.0.0
    dash-html-components==2.0.0
    dash-table==5.0.0
    flake8==3.9.2
    Flask==2.0.1
    Flask-Caching==1.10.1
    Flask-Compress==1.10.1
    iniconfig==1.1.1
    itsdangerous==2.0.1
    Jinja2==3.0.1
    MarkupSafe==2.0.1
    mccabe==0.6.1
    numpy==1.21.2
    packaging==21.0
    pandas==1.3.3
    plotly==5.3.1
    pluggy==1.0.0
    py==1.10.0
    pycodestyle==2.7.0
    pyflakes==2.3.1
    pyparsing==2.4.7
    pytest==6.2.5
    python-dateutil==2.8.2
    python-dotenv==0.19.0
    pytz==2021.1
    six==1.16.0
    tenacity==8.0.1
    toml==0.10.2
    Werkzeug==2.0.1
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where=src

